--- a/kyue-studio-website-v3/src/components/header/Header.css
+++ b/kyue-studio-website-v3/src/components/header/Header.css
@@ -2,15 +2,16 @@
     padding: 10px;
     /* max-width: 600px; */
     box-sizing: border-box; /*TODO: necessary?*/
-    width: 100%;
-    margin: 0 auto;
+    /* width: 100%; */
+    width: 100vw;
+    /* margin: 0 auto; */
     background-color: #a1c8e3;
 }
 
 header{
     display:flex;
     justify-content: space-between;
-    margin-bottom: 25px;
+    margin-bottom: 10px;
 }
 
 header a{
