--- a/kyue-studio-website-v3/src/pages/home/Home.css
+++ b/kyue-studio-website-v3/src/pages/home/Home.css
@@ -1,6 +1,6 @@
 .homepagebanner{
-  width: 90vw;
-  max-width: 100vw;
+  width: 600px;
+  max-width: 90vw;
   height: auto;
   display: block;
   margin: 0 auto;
